--- a/index.html
+++ b/index.html
@@ -11,43 +11,33 @@
   <main>
     <form id="form-1">
       <fieldset class="percetage-input-container">
-        <p>What is</p>
-        <input class="percent-input">
-        <p>% of</p>
-        <input class="number-input">
-        <p>?</p>
+        <p>What is <input class="percent-input"> % of <input class="number-input"></p>
       </fieldset>
       <div class="result-container">
-        <button class="calculate-btn">Calculate</button>
-        <input readonly class="result">
+        <button class="calculate-btn" type="button">Calculate</button>
+        <p>Result: <span id="result"></span></p>
       </div>
     </form>
     <form id="form-2">
       <fieldset class="percetage-input-container">
-        <input class="first-number-input">
-        <p>is what percent of</p>
-        <input class="second-number-input">
-        <p>?</p>
+        <p><input class="first-number-input"> is what percent of <input class="second-number-input">?</p>        
       </fieldset>
       <div class="result-container">
         <button class="calculate-btn">Calculate</button>
-        <input readonly class="result">
+        <p>Result: <span id="result"></span></p>
       </div>
     </form>
     <form id="form-3">
       <fieldset class="percetage-input-container">
-        <p>What is the percent difference from</p>
-        <input class="first-number-input">
-        <p>to</p>
-        <input class="second-number-input">
-        <p>?</p>
+        <p>What is the percent difference from <input class="first-number-input"> to <input class="second-number-input">?</p>
       </fieldset>
       <div class="result-container">
         <button class="calculate-btn">Calculate</button>
-        <input readonly class="result">
+        <p>Result: <span id="result"></span></p>
       </div>
     </form>
   </main>
 </body>
+<script src="script.js"></script>
 
 </html>
