functionality for second question

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <p>What is <input class="percent-input"> % of <input class="number-input"></p>
       </fieldset>
       <div class="result-container">
-        <button class="calculate-btn" type="button">Calculate</button>
+        <button class="calculate-btn" type="button" id="btn-1">Calculate</button>
         <p>Result: <span id="result"></span></p>
       </div>
     </form>
@@ -23,8 +23,8 @@
         <p><input class="first-number-input"> is what percent of <input class="second-number-input">?</p>        
       </fieldset>
       <div class="result-container">
-        <button class="calculate-btn">Calculate</button>
-        <p>Result: <span id="result"></span></p>
+        <button class="calculate-btn" id="btn-2" type="button">Calculate</button>
+        <p>Result: <span id="percentageResult"></span></p>
       </div>
     </form>
     <form id="form-3">
