find percentage difference between 2 numbers

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <p>What is <input class="percent-input"> % of <input class="number-input"></p>
       </fieldset>
       <div class="result-container">
-        <button class="calculate-btn" type="button" id="btn-1">Calculate</button>
+        <button class="calculate-btn" id="btn-1" type="button">Calculate</button>
         <p>Result: <span id="result"></span></p>
       </div>
     </form>
@@ -29,11 +29,11 @@
     </form>
     <form id="form-3">
       <fieldset class="percetage-input-container">
-        <p>What is the percent difference from <input class="first-number-input"> to <input class="second-number-input">?</p>
+        <p>What is the percent difference from <input class="first-number-difference-input"> to <input class="second-number-difference-input">?</p>
       </fieldset>
       <div class="result-container">
-        <button class="calculate-btn">Calculate</button>
-        <p>Result: <span id="result"></span></p>
+        <button class="calculate-btn" id="btn-3" type="button">Calculate</button>
+        <p>Result: <span id="percentDifferenceResult"></span></p>
       </div>
     </form>
   </main>
