--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <div class="result-container">
           <button class="calculate-btn" id="btn-1" type="button">CALCULATE</button>
           <input id="result" readonly>
-          <button class="reset" type="reset">↻</button>
+          <button class="reset" type="reset" title="Reset">↻</button>
         </div>
       </fieldset>
     </form>
@@ -28,7 +28,7 @@
         <div class="result-container">
           <button class="calculate-btn" id="btn-2" type="button">CALCULATE</button>
           <input id="percentageResult" readonly>
-          <button class="reset" type="reset">↻</button>
+          <button class="reset" type="reset" title="Reset">↻</button>
         </div>
       </fieldset>
     </form>
@@ -38,7 +38,7 @@
         <div class="result-container">
           <button class="calculate-btn" id="btn-3" type="button">CALCULATE</button>
           <input id="percentDifferenceResult" readonly>
-          <button class="reset" type="reset">↻</button>
+          <button class="reset" type="reset" title="Reset">↻</button>
         </div>
       </fieldset>
     </form>
