--- a/index.html
+++ b/index.html
@@ -24,6 +24,14 @@
   <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-WTRJRD9K" height="0" width="0"
       style="display:none;visibility:hidden"></iframe></noscript>
   <!-- End Google Tag Manager (noscript) -->
+  <nav>
+    <div>
+      <p>The Marketing Metrics</p>
+    </div>
+    <div>
+      <a href="definitions.html">Digital Marketing Definitions</a>
+    </div>
+  </nav>
   <main>
     <div class="title-container">
       <h1>Percentage Calculator</h1>
