added and styled navbar

--- a/index.html
+++ b/index.html
@@ -25,11 +25,13 @@
       style="display:none;visibility:hidden"></iframe></noscript>
   <!-- End Google Tag Manager (noscript) -->
   <nav>
-    <div>
-      <p>The Marketing Metrics</p>
-    </div>
-    <div>
-      <a href="definitions.html">Digital Marketing Definitions</a>
+    <div class="nav-contents">
+      <div>
+        <p>The Marketing Metrics</p>
+      </div>
+      <div>
+        <a href="definitions.html">Digital Marketing Definitions</a>
+      </div>
     </div>
   </nav>
   <main>
