--- a/definitions.html
+++ b/definitions.html
@@ -1,113 +1,157 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="definitions.css">
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&display=swap" rel="stylesheet">
   <title>Percentage Calculator</title>
 </head>
+
 <body>
+  <nav>
+    <div class="nav-contents">
+      <div>
+        <p>The Marketing Metrics</p>
+      </div>
+      <div class="links">
+        <a href="definitions.html" class="definitions-link">Digital Marketing Definitions</a>
+        <a href="index.html" class="calculator-link">Percentage Calculator</a>
+      </div>
+    </div>
+  </nav>
   <main>
-    <h1>Digital Marketing Definitions</h1>
-    <div class="definition-container">
-      <h2>Cost Per Click (CPC):</h2>
-      <p>Total cost divided by the number of clicks on an ad.</p>
-    </div>
-    <div class="definition-container">
-      <h2>Cost per action (CPA):</h2>
-      <p>Amount paid to acquire a new customer, lead, or other action. Calculated as the Total Cost divided by number of actions.</p>
-    </div>
-    <div class="definition-container">
-      <h2>Cost per thousand impressions (CPM):</h2>
-      <p>The average cost per thousand impressions, calculated as the Total Cost/Thousands of Impressions. (Cost/Impression)*1000</p>
-    </div>
-    <div class="definition-container">
-      <h2>Cost per valuable impressions (CPVM):</h2>
-      <p>Impressions that are viewable, verified non-fraudulent, within a specific frequency range and delivered to the intended target audience.</p>
-    </div>
-    <div class="definition-container">
-      <h2>Viewability</h2>
-      <p>A metric created by the Internet Advertising Bureau (IAB) used to measure how viewable an ad actually is when it's served..</p>
-    </div>
-    <div class="definition-container">
-      <h2>Audience Targeting:</h2>
-      <p>A method that enables advertisers to show an ad specifically to visitors based on their shared behavioral, demographic, geographic and/or technographic attributes.</p>
-    </div>
-    <div class="definition-container">
-      <h2>Behavioral Targeting:</h2>
-      <p>Using previous online user activity (e.g. pages visited, content viewed, searches, clicks, and purchases) often through the use of 3rd party data providers to generate a segment that is used to match advertising creative to users.</p>
-    </div>
-    <div class="definition-container">
-      <h2>Remarketing</h2>
-      <p>A tactic that targets those individuals who have already visited a site with ads based on what is already known about them.</p>
-    </div>
-    <div class="definition-container">
-      <h2>Frequency Capping:</h2>
-      <p>The limit of how many times a given ad will be shown to a unique cookie during a session or within a specified time period.</p>
-    </div>
-    <div class="definition-container">
-      <h2>Dayparting:</h2>
-      <p>A method that enables advertisers to show an ad specifically to visitors only on certain days of the week or times of the day.</p>
-    </div>
-    <div class="definition-container">
-      <h2></h2>
-      <p></p>
-    </div>
-    <div class="definition-container">
-      <h2>Open Auction</h2>
-      <p>We saw an example of a programmatic media buy made via open auction in the walk through featuring Emily. Bidders compete for inventory and users from thousands of sites in a 2nd price real time auction.
-        In a 2nd price, aka Vickrey auction, the highest bidder wins but the price paid is the second-highest bid.
+    <div class="content-container">
+      <h1>Digital Marketing Definitions</h1>
+      <div class="definition-container">
+        <h2>Cost Per Click (CPC):</h2>
+        <p>Total cost divided by the number of clicks on an ad.</p>
+      </div>
+      <div class="definition-container">
+        <h2>Cost per action (CPA):</h2>
+        <p>Amount paid to acquire a new customer, lead, or other action. Calculated as the Total Cost divided by number
+          of
+          actions.</p>
+      </div>
+      <div class="definition-container">
+        <h2>Cost per thousand impressions (CPM):</h2>
+        <p>The average cost per thousand impressions, calculated as the Total Cost/Thousands of Impressions.
+          (Cost/Impression)*1000</p>
+      </div>
+      <div class="definition-container">
+        <h2>Cost per valuable impressions (CPVM):</h2>
+        <p>Impressions that are viewable, verified non-fraudulent, within a specific frequency range and delivered to
+          the
+          intended target audience.</p>
+      </div>
+      <div class="definition-container">
+        <h2>Viewability</h2>
+        <p>A metric created by the Internet Advertising Bureau (IAB) used to measure how viewable an ad actually is when
+          it's served..</p>
+      </div>
+      <div class="definition-container">
+        <h2>Audience Targeting:</h2>
+        <p>A method that enables advertisers to show an ad specifically to visitors based on their shared behavioral,
+          demographic, geographic and/or technographic attributes.</p>
+      </div>
+      <div class="definition-container">
+        <h2>Behavioral Targeting:</h2>
+        <p>Using previous online user activity (e.g. pages visited, content viewed, searches, clicks, and purchases)
+          often
+          through the use of 3rd party data providers to generate a segment that is used to match advertising creative
+          to
+          users.</p>
+      </div>
+      <div class="definition-container">
+        <h2>Remarketing</h2>
+        <p>A tactic that targets those individuals who have already visited a site with ads based on what is already
+          known
+          about them.</p>
+      </div>
+      <div class="definition-container">
+        <h2>Frequency Capping:</h2>
+        <p>The limit of how many times a given ad will be shown to a unique cookie during a session or within a
+          specified
+          time period.</p>
+      </div>
+      <div class="definition-container">
+        <h2>Dayparting:</h2>
+        <p>A method that enables advertisers to show an ad specifically to visitors only on certain days of the week or
+          times of the day.</p>
+      </div>
+      <div class="definition-container">
+        <h2></h2>
+        <p></p>
+      </div>
+      <div class="definition-container">
+        <h2>Open Auction</h2>
+        <p>We saw an example of a programmatic media buy made via open auction in the walk through featuring Emily.
+          Bidders compete for inventory and users from thousands of sites in a 2nd price real time auction.
+          In a 2nd price, aka Vickrey auction, the highest bidder wins but the price paid is the second-highest bid.
         </p>
-    </div>
-    <div class="definition-container">
-      <h2>Private Auction:</h2>
-      <p>A by-invitation-only, real time marketplace comprised of handpicked sites/placements</p>
-    </div>
-    <div class="definition-container">
-      <h2>Segments:</h2>
-      <p>A set of users who share one or more similar attributes. Also referred to as a data segment or audience. </p>
-    </div>
-    <div class="definition-container">
-      <h2>Predictive Analysis:</h2>
-      <p>Powerful analytic engine that encompasses various statistical and data mining techniques to make predictions/forecasts about future</p>
-    </div>
-    <div class="definition-container">
-      <h2>Real-time bidding (RTB)</h2>
-      <p>An automated process which allows media buyers to evaluate, bid on and purchase ad inventory in real time on an impression-by impression basis.</p>
-    </div>
-    <div class="definition-container">
-      <h2>Ad Server:</h2>
-      <p>A technology that places ads on websites and provides a variety of specialized services for publishers and advertisers, including tracking the number of impressions and clicks delivered by a campaign, blocking ads from serving on specific sites (blocklist) and selecting the ads that will yield a publisher or advertiser the highest value.</p>
-    </div>
-    <div class="definition-container">
-      <h2>Ad Tag:</h2>
-      <p>An ad-tag is a snippet of HTML, typically composed of JavaScript or an IFRAME that tells a browser to request some content from an ad server.</p>
-    </div>
-    <div class="definition-container">
-      <h2>Impression:</h2>
-      <p>The total number of times an ad has been served.</p>
-    </div>
-    <div class="definition-container">
-      <h2>Ad Exchange:</h2>
-      <p>Technology platforms used to buy and sell online ad impressions on an auction basis.</p>
-    </div>
-    <div class="definition-container">
-      <h2>Demand Side Platform (DSP):</h2>
-      <p>Trading or bid execution technology for buyers to manage ad exchanges, networks, and SSPs.</p>
-    </div>
-    <div class="definition-container">
-      <h2>Data Providers:</h2>
-      <p>Third party vendors who provide a holistic view of consumers. These rich user attributes are then used for both targeting and campaign analytics...</p>
-    </div>
-    <div class="definition-container">
-      <h2>Sell Side platform (SSP):</h2>
-      <p>SSPs provide outsourced media selling and ad network management services for publishers.</p>
-    </div>
-    <div class="definition-container">
-      <h2>Data Management Platform (DMP):</h2>
-      <p>A centralized system for gathering first-party data, integrating with 3rd party data, user-level performance data and applying this data to one's advertising strategy.</p>
+      </div>
+      <div class="definition-container">
+        <h2>Private Auction:</h2>
+        <p>A by-invitation-only, real time marketplace comprised of handpicked sites/placements</p>
+      </div>
+      <div class="definition-container">
+        <h2>Segments:</h2>
+        <p>A set of users who share one or more similar attributes. Also referred to as a data segment or audience. </p>
+      </div>
+      <div class="definition-container">
+        <h2>Predictive Analysis:</h2>
+        <p>Powerful analytic engine that encompasses various statistical and data mining techniques to make
+          predictions/forecasts about future</p>
+      </div>
+      <div class="definition-container">
+        <h2>Real-time bidding (RTB)</h2>
+        <p>An automated process which allows media buyers to evaluate, bid on and purchase ad inventory in real time on
+          an
+          impression-by impression basis.</p>
+      </div>
+      <div class="definition-container">
+        <h2>Ad Server:</h2>
+        <p>A technology that places ads on websites and provides a variety of specialized services for publishers and
+          advertisers, including tracking the number of impressions and clicks delivered by a campaign, blocking ads
+          from
+          serving on specific sites (blocklist) and selecting the ads that will yield a publisher or advertiser the
+          highest value.</p>
+      </div>
+      <div class="definition-container">
+        <h2>Ad Tag:</h2>
+        <p>An ad-tag is a snippet of HTML, typically composed of JavaScript or an IFRAME that tells a browser to request
+          some content from an ad server.</p>
+      </div>
+      <div class="definition-container">
+        <h2>Impression:</h2>
+        <p>The total number of times an ad has been served.</p>
+      </div>
+      <div class="definition-container">
+        <h2>Ad Exchange:</h2>
+        <p>Technology platforms used to buy and sell online ad impressions on an auction basis.</p>
+      </div>
+      <div class="definition-container">
+        <h2>Demand Side Platform (DSP):</h2>
+        <p>Trading or bid execution technology for buyers to manage ad exchanges, networks, and SSPs.</p>
+      </div>
+      <div class="definition-container">
+        <h2>Data Providers:</h2>
+        <p>Third party vendors who provide a holistic view of consumers. These rich user attributes are then used for
+          both
+          targeting and campaign analytics...</p>
+      </div>
+      <div class="definition-container">
+        <h2>Sell Side platform (SSP):</h2>
+        <p>SSPs provide outsourced media selling and ad network management services for publishers.</p>
+      </div>
+      <div class="definition-container">
+        <h2>Data Management Platform (DMP):</h2>
+        <p>A centralized system for gathering first-party data, integrating with 3rd party data, user-level performance
+          data and applying this data to one's advertising strategy.</p>
+      </div>
     </div>
   </main>
 </body>
+
 </html>
