--- a/index.html
+++ b/index.html
@@ -29,8 +29,9 @@
       <div>
         <p>The Marketing Metrics</p>
       </div>
-      <div>
-        <a href="definitions.html">Digital Marketing Definitions</a>
+      <div class="links">
+        <a href="definitions.html" class="definitions-link">Digital Marketing Definitions</a>
+        <a href="index.html" class="calculator-link">Percentage Calculator</a>
       </div>
     </div>
   </nav>
