--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   <nav>
     <div class="nav-contents">
       <div>
-        <p>The Marketing Metrics</p>
+        <p>Digital Marketing Definitions & Formulas</p>
       </div>
       <div class="links">
         <a href="definitions.html" class="definitions-link">Digital Marketing Definitions</a>
@@ -63,23 +63,23 @@
     </form>
     <form id="form">
       <fieldset class="percetage-input-container">
-        <p>What is the percent difference from <input class="first-number-difference-input"> to <input
-            class="second-number-difference-input"> ?</p>
-        <div class="result-container">
-          <button class="calculate-btn" id="btn-3" type="button">CALCULATE</button>
-          <input id="percentDifferenceResult" readonly>
-          <button class="reset" type="reset" title="Reset">↻</button>
-        </div>
-      </fieldset>
-    </form>
-    <form id="form">
-      <fieldset class="percetage-input-container">
         <p>What is the percent increase/decrease from <br> <input class="old-value" placeholder="initial value"> to
           <input class="new-value" placeholder="final value"> ?
         </p>
         <div class="result-container">
           <button class="calculate-btn" id="btn-4" type="button">CALCULATE</button>
           <input id="percentChangeResult" readonly>
+          <button class="reset" type="reset" title="Reset">↻</button>
+        </div>
+      </fieldset>
+    </form>
+    <form id="form">
+      <fieldset class="percetage-input-container">
+        <p>What is the percent difference from <input class="first-number-difference-input"> to <input
+            class="second-number-difference-input"> ?</p>
+        <div class="result-container">
+          <button class="calculate-btn" id="btn-3" type="button">CALCULATE</button>
+          <input id="percentDifferenceResult" readonly>
           <button class="reset" type="reset" title="Reset">↻</button>
         </div>
       </fieldset>
