more media queries

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   <!-- End Google Tag Manager (noscript) -->
   <nav>
     <div class="nav-contents">
-      <div>
+      <div class="web-name-container">
         <p>Digital Marketing Definitions & Formulas</p>
       </div>
       <div class="links">
