more media queries

--- a/index.html
+++ b/index.html
@@ -43,7 +43,9 @@
     </div>
     <form id="form">
       <fieldset class="percetage-input-container">
-        <p>What is <input class="percent-input"> % of <input class="number-input"> ?</p>
+        <div class="inquiry">
+          <p>What is <input class="percent-input"> % of <input class="number-input"> ?</p>
+        </div>
         <div class="result-container">
           <button class="calculate-btn" id="btn-1" type="button">CALCULATE</button>
           <input id="result" readonly>
@@ -53,7 +55,9 @@
     </form>
     <form id="form">
       <fieldset class="percetage-input-container">
-        <p><input class="first-number-input"> is what percent of <input class="second-number-input"> ?</p>
+        <div class="inquiry">
+          <p><input class="first-number-input"> is what percent of <input class="second-number-input"> ?</p>
+        </div>
         <div class="result-container">
           <button class="calculate-btn" id="btn-2" type="button">CALCULATE</button>
           <input id="percentageResult" readonly>
@@ -63,9 +67,11 @@
     </form>
     <form id="form">
       <fieldset class="percetage-input-container">
-        <p>What is the percent increase/decrease from <br> <input class="old-value" placeholder="initial value"> to
-          <input class="new-value" placeholder="final value"> ?
-        </p>
+        <div class="inquiry">
+          <p>What is the percent increase/decrease from <br> <input class="old-value" placeholder="initial value"> to
+            <input class="new-value" placeholder="final value"> ?
+          </p>
+        </div>
         <div class="result-container">
           <button class="calculate-btn" id="btn-4" type="button">CALCULATE</button>
           <input id="percentChangeResult" readonly>
@@ -75,8 +81,10 @@
     </form>
     <form id="form">
       <fieldset class="percetage-input-container">
-        <p>What is the percent difference from <input class="first-number-difference-input"> to <input
-            class="second-number-difference-input"> ?</p>
+        <div class="inquiry">
+          <p>What is the percent difference from <input class="first-number-difference-input"> to <input
+              class="second-number-difference-input"> ?</p>
+        </div>
         <div class="result-container">
           <button class="calculate-btn" id="btn-3" type="button">CALCULATE</button>
           <input id="percentDifferenceResult" readonly>
