media queries for definitions

--- a/definitions.html
+++ b/definitions.html
@@ -12,7 +12,7 @@
 <body>
   <nav>
     <div class="nav-contents">
-      <div>
+      <div class="web-name-container">
         <p>Digital Marketing Definitions & Formulas</p>
       </div>
       <div class="links">
