changed to bullet points

--- a/definitions.html
+++ b/definitions.html
@@ -28,37 +28,37 @@
         <h3>Bounce Rate:</h3>
         <ul>
           <li>Bounce Rate measures the percentage of visitors who leave a website after viewing only one page.</li>
-          <p>- (Number of Single Page Visits / Total Visits) x 100</p>
+          <li>(Number of Single Page Visits / Total Visits) x 100</li>
         </ul>
 
         <h3>CPA (Cost Per Acquisition):</h3>
         <ul>
           <li>CPA calculates the cost of acquiring a new customer through a specific marketing campaign.</li>
-          <p>- Total Cost / Number of Acquisitions</p>
+          <li>Total Cost / Number of Acquisitions</li>
         </ul>
 
         <h3>CPC (Cost Per Click):</h3>
         <ul>
           <li>CPC represents the cost of each click in a pay-per-click advertising campaign.</li>
-          <p>- Total Cost of Campaign / Total Number of Clicks</p>
+          <li>Total Cost of Campaign / Total Number of Clicks</li>
         </ul>
 
         <h3>CPL (Cost Per Lead):</h3>
         <ul>
           <li>CPL measures the cost of acquiring a new lead through a marketing campaign.</li>
-          <p>- Total Cost of Campaign / Number of Leads Acquired</p>
+          <li>Total Cost of Campaign / Number of Leads Acquired</li>
         </ul>
 
         <h3>CPS (Cost Per Sale):</h3>
         <ul>
           <li>CPS calculates the cost of acquiring a new sale through a marketing campaign.</li>
-          <p>- Total Cost of Campaign / Number of Sales Generated</p>
+          <li>Total Cost of Campaign / Number of Sales Generated</li>
         </ul>
 
-        <h3>CPM (Cost Per Million):</h3>
+        <h3>CPM (Cost Per Mille):</h3>
         <ul>
           <li>CPM is the cost per one thousand impressions in a display advertising campaign.</li>
-          <p>- Total Cost of Campaign / (Number of Impressions / 1,000)</p>
+          <li>Total Cost of Campaign / (Number of Impressions / 1,000)</li>
         </ul>
 
         <h3>CTR (Click-Through Rate):</h3>
@@ -66,7 +66,7 @@
           <li>CTR measures the effectiveness of an online advertising campaign by calculating the percentage of users
             who
             click on an ad after seeing it.</li>
-          <p>- (Number of Clicks / Number of Impressions) x 100</p>
+          <li>(Number of Clicks / Number of Impressions) x 100</li>
         </ul>
 
         <h3>Customer Churn Rate:</h3>
@@ -74,29 +74,29 @@
           <li>Churn Rate calculates the percentage of customers who stopped using a product or service during a
             specified
             time period.</li>
-          <p>- (Number of Customers at the Start of Period - Number of Customers at the End of Period) / Number
+          <li>(Number of Customers at the Start of Period - Number of Customers at the End of Period) / Number
             of
-            Customers at the Start of Period</p>
+            Customers at the Start of Period</li>
         </ul>
 
         <h3>LTV (Customer Lifetime Value):</h3>
         <ul>
           <li>LTV estimates the long-term value a customer will bring to a business over their entire relationship.</li>
-          <p>- Average Purchase Value x Average Purchase Frequency x Average Customer Lifespan</p>
+          <li>Average Purchase Value x Average Purchase Frequency x Average Customer Lifespan</li>
         </ul>
 
         <h3>Return on Ad Spend (ROAS):</h3>
         <ul>
           <li>ROAS measures the effectiveness of an advertising campaign by calculating the revenue generated for every
             dollar spent on advertising.</li>
-          <p>- (Revenue from Ad Campaign / Cost of Ad Campaign)</p>
+          <li>(Revenue from Ad Campaign / Cost of Ad Campaign)</li>
         </ul>
 
         <h3>Return on Investment (ROI):</h3>
         <ul>
           <li>ROI measures a marketing campaign's profitability, considering the campaign's cost and the revenue
             generated.</li>
-          <p>- [(Net Profit - Cost of Investment) / Cost of Investment] x 100</p>
+          <li>[(Net Profit - Cost of Investment) / Cost of Investment] x 100</li>
         </ul>
       </div>
       <h1>General Definitions:</h1>
