links to look clickable

--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
   <nav>
     <div class="nav-contents">
       <div class="web-name-container">
-        <p>Digital Marketing Definitions & Formulas</p>
+        <p>Marketing Definitions & Formulas</p>
       </div>
       <div class="links">
-        <a href="definitions.html" class="definitions-link">Digital Marketing Definitions</a>
+        <a href="definitions.html" class="definitions-link">Marketing Definitions</a>
         <a href="index.html" class="calculator-link">Percentage Calculator</a>
       </div>
     </div>
