--- a/index.html
+++ b/index.html
@@ -102,14 +102,14 @@
         </div>
         <div class="formula-container">
           <div class="equals">
-            <p>percentage change = </p>
+            <p>percent change = </p>
           </div>
           <div class="fraction">
             <span class="numerator">initial value - final value</span>
             <span class="denominator">initial value</span>
           </div>
           <div class="multiply">
-            <p >&#215; 100</p>
+            <p>&#215; 100</p>
           </div>
         </div>
       </fieldset>
